# Traversability-Based-Contact-Space-Planner

./: README.md
comps/cbirrt2/: TaskSpaceRegion.cpp  catkin.cmake  catkin.cmake~  cbirrt.cpp  cbirrt.h  cbirrtmain.cpp  cbirrtparameters.h  cbirrtproblem.cpp  cbirrtproblem.h  package.xml~  setup.py  stdafx.h
comps/cbirrt2/src/cbirrtpy/: CBiRRT.py  TSR.py  __init__.py
comps/elastic_strips/: Balance.cpp  Balance.h  CMakeLists.txt  CMakeLists.txt~  ContactRegion.cpp  ContactRegion.h  ElasticStrips.cpp  ElasticStrips.h  ElasticStripsParameters.h  catkin.cmake  manifest.xml  package.xml  package.xml~  rosbuild.cmake  setup.py  stdafx.h
comps/elastic_strips/src/elasticstripspy/: ElasticStrips.py  TransformMatrix.py  __init__.py
comps/generalik/: GeneralIK.cpp  GeneralIK.h  catkin.cmake~  package.xml~  stdafx.h
escher_description/: CMakeLists.txt  package.xml
escher_description/robot/: escher.gv  escher.kinbody.urdf  escher.robot.srdf  escher.srdf  escher.urdf  escher_v2.kinbody.urdf  escher_v3.kinbody.urdf  escher_v4.kinbody.urdf  new_escher.urdf
escher_description/robot/meshes/: ElbowLeft.stl  ElbowRight.stl  PalmLeft.stl  PalmRight.stl  PointerLeft.stl  PointerRight.stl  RingLeft.stl  RingRight.stl  ShoulderPitchLeft.stl  ShoulderPitchRight.stl  ShoulderRollLeft.stl  ShoulderRollRight.stl  ShoulderYawLeft.stl  ShoulderYawRight.stl  ThumbBaseLeft.stl  ThumbBaseRight.stl  ThumbLeft.stl  ThumbRight.stl  WristPitchRollLeft.stl  WristPitchRollRight.stl  WristYawLeft.stl  WristYawRight.stl  head.stl  head_lidar.stl  l_foot.stl  l_shin.stl  l_thigh.stl  neck.stl  r_foot.stl  r_shin.stl  r_thigh.stl
openrave_catkin/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
openrave_catkin/cmake/: openrave_catkin-extras.cmake.in
openrave_catkin/env-hooks/: 20.openrave_catkin.sh.in
traversability_based_contact_space_planner/: CMakeLists.txt  package.xml
traversability_based_contact_space_planner/scripts/: config_parameter.py  contact_plan_clustering.py  contact_point_pair_feature.py  contact_region.py  contact_space_planner.py  contact_transition.py  drawing_functions.py  environment_handler.py  geometry_mesh.py  humanoid_motion_planner.py  load_escher.py  map_grid.py  motion_plan.py  motion_plan_library_matching.py  robot.py  step_interpolation.py  structures.py  torso_path_segmentation.py  transformation_conversion.py  transition_footstep_window_generator.py  traversability_regressor_training.py  traversability_training_data_collector.py
traversability_based_contact_space_planner/scripts/escher_motion_planning_data/: delete_libraries.sh  footstep_window  footstep_window_legs_only  goal_index_dict  motion_plan_dist_all_manipulators  motion_plan_dist_legs_and_left_arm  motion_plan_dist_legs_and_right_arm  motion_plan_dist_legs_only  motion_plan_explore_order_all_manipulators  motion_plan_explore_order_legs_and_left_arm  motion_plan_explore_order_legs_and_right_arm  motion_plan_explore_order_legs_only  motion_plan_library_legs_and_left_arm  motion_plan_library_legs_and_right_arm  stance_chest_goal_dict_legs_only  step_transition_model_wide_range.txt  traversability_regressor_legs_and_one_hand  traversability_regressor_legs_only
traversability_based_contact_space_planner/scripts/escher_motion_planning_data/motion_plan_all_manipulators/: traj_0.xml  traj_1.xml  traj_10.xml  traj_11.xml  traj_12.xml  traj_13.xml  traj_14.xml  traj_15.xml  traj_16.xml  traj_17.xml  traj_18.xml  traj_19.xml  traj_2.xml  traj_20.xml  traj_21.xml  traj_22.xml  traj_23.xml  traj_24.xml  traj_25.xml  traj_26.xml  traj_27.xml  traj_28.xml  traj_29.xml  traj_3.xml  traj_30.xml  traj_31.xml  traj_32.xml  traj_33.xml  traj_34.xml  traj_35.xml  traj_36.xml  traj_37.xml  traj_38.xml  (+19 more)
traversability_cpp_utility/: CMakeLists.txt  manifest.xml  package.xml  setup.py
traversability_cpp_utility/include/: Boundary.hpp  ContactPoint.hpp  ContactRegion.hpp  ContactSpacePlanning.hpp  ContactState.hpp  Drawing.hpp  GroundContactPointGrid.hpp  MapGrid.hpp  PointGrid.hpp  Structure.hpp  SurfaceContactPointGrid.hpp  TraversabilityCPPUtility.hpp  TrimeshSurface.hpp  Utilities.hpp
traversability_cpp_utility/scripts/traversability_cpp_utility_wrapper/: __init__.py  traversability_cpp_utility_wrapper.py
traversability_cpp_utility/src/: Boundary.cpp  ContactPoint.cpp  ContactRegion.cpp  Drawing.cpp  MapGrid.cpp  PointGrid.cpp  SurfaceContactPointGrid.cpp  TraversabilityCPPUtility.cpp  TrimeshSurface.cpp  Utilities.cpp
(+204 files in other folders)
