<?xml version="1.0"?>
<package>
  <name>traversability_cpp_utility</name>
  <version>0.0.1</version>
  <description>
    OpenRAVE plugin for traversability calculation
  </description>
  <!-- <url type="repository">https://github.com/personalrobotics/or_urdf</url> -->
  <maintainer email="linyuchi@umich.edu">Yu-Chi Lin</maintainer>
  <author email="linyuchi@umich.edu">Yu-Chi Lin</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>boost</build_depend>
  <build_depend>openrave_catkin</build_depend>
  <build_depend>srdfdom</build_depend>
  <build_depend>urdf</build_depend>
  <run_depend>boost</run_depend>
  <run_depend>openrave_catkin</run_depend>
  <run_depend>srdfdom</run_depend>
  <run_depend>urdf</run_depend>
</package>
